<resources>
    <string name="app_name">DrawerAndTab</string>
    <string name="cardview">卡片视图: %d</string>
    <string name="navigation_drawer_open">Navigation drawer opened</string>
    <string name="navigation_drawer_close">Navigation drawer opened</string>
    <string name="share">分享</string>
    <string name="feedback">反馈</string>
    <string name="tool">工具</string>
    <string name="camera">相机</string>
    <string name="help">帮助</string>
    <string name="upload">上传</string>
    <string name="manage">管理</string>
    <string name="call">呼叫</string>
</resources>
