<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_call"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/call"/>
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/camera"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/help"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/manage"/>
        <item
            android:id="@+id/upload"
            android:icon="@android:drawable/ic_menu_upload"
            android:title="@string/upload"/>
    </group>

    <item android:title="@string/tool">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/feedback"/>
        </menu>
    </item>

</menu>